fix layout flicker when editing column name

--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -47,6 +47,7 @@
   word-break: break-all;
   align-items: center;
   margin-bottom: $margin--default;
+  height: 48px;
   position: relative;
 }
 
@@ -55,7 +56,7 @@
   align-items: center;
   justify-content: space-between;
   width: auto;
-  height: 100%;
+  height: auto;
   border-bottom: solid 3px var(--accent-color);
   margin: 0 $margin--small 0 0;
 }
@@ -81,12 +82,13 @@
 }
 
 .column__header-input {
-  display: inline-block;
+  display: flex;
+  align-items: center;
   border: none;
   font-size: calc(18px + 0.4vw);
   color: $color-black;
-  border-bottom: solid 3px var(--accent-color);
-  margin: $margin--default $margin--small $margin--default 0;
+  border-bottom: dashed 3px var(--accent-color);
+  margin: 0 $margin--small 0 0;
   font-weight: bold;
   letter-spacing: $letter-spacing--large;
   line-height: $line-height--large;
